WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272637
[WebGPU]
https://playcanvas.github.io/#/graphics/post-effects
fails shader compilation
https://bugs.webkit.org/show_bug.cgi?id=272637
Summary
[WebGPU] https://playcanvas.github.io/#/graphics/post-effects fails shader co...
Mike Wyrzykowski
Reported
2024-04-13 19:57:04 PDT
Created
attachment 470915
[details]
WGSL source which reproduces the issue [WebGPU]
https://playcanvas.github.io/#/graphics/post-effects
fails shader compilation 1 error generated while compiling the shader: 264:0: missing return at end of function Shader source attached, I don't completely understand the error since like 264 is (unless it refers to the previous line / function): fn scalableAmbientObscurance_vf2_vf3_vf3_(uv_4 : ptr<function, vec2<f32>>, origin_1 : ptr<function, vec3<f32>>, normal_1 : ptr<function, vec3<f32>>) -> f32 {
Attachments
WGSL source which reproduces the issue
(11.99 KB, text/plain)
2024-04-13 19:57 PDT
,
Mike Wyrzykowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-13 19:57:20 PDT
<
rdar://problem/126425833
>
Tadeu Zagallo
Comment 2
2024-04-15 09:45:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27267
EWS
Comment 3
2024-04-17 09:10:11 PDT
Committed
277618@main
(79d5e4f3dd8b): <
https://commits.webkit.org/277618@main
> Reviewed commits have been landed. Closing PR #27267 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug