[WebGPU] https://playcanvas.github.io/#/graphics/post-effects fails shader compilation https://bugs.webkit.org/show_bug.cgi?id=272637 rdar://126425833

Reviewed by Mike Wyrzykowski.

The specific issue that affected the sampled in the bug report was that BreakStatement
was incorrectly returning `Next` instead of `Break` in the behavior analysis. However,
I also made sure that all of the behavior analysis CTS tests are now passing and updated
the expectations.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/parse/statement_behavior-expected.txt: Added.
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::analyze):
(WGSL::TypeChecker::analyzeStatements):

Canonical link: https://commits.webkit.org/277618@main